[project]
name = "gguf_layer_visualizer"
version = "0.1.0"
authors = "Kyle Rose <kylemail1946@gmail.com>"
description = "Generate false-color visualizations of layer weight values and derivative statistics from transformers models."
license = "MIT"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

["tool.hatch.build.targets.wheel"]
packages = [ "gguf_layer_visualizer",]

[tool.hatch.build.targets.wheel]
packages = [ "main",]
